# labs-engine-finish

./: .gitignore  HANDOFF.md  capture-system-prompt.txt  dl_webview2.ps1  helios_decompiled.c  titan-direct-prompt.txt
app/: CMakeLists.txt
app/core/: CMakeLists.txt  FrameBufferPool.cpp  FrameBufferPool.h  FrameTypes.h  ICaptureProvider.h  IFrameProcessor.h  IPlugin.h  InputOverride.cpp  InputOverride.h  InputTypes.h  LabsPaths.h  PluginHost.cpp  PluginHost.h  SharedFrameReader.cpp  SharedFrameReader.h
app/engine/: CMakeLists.txt  ControllerMonitorWidget.cpp  LabsMainWindow.cpp  LabsMainWindow.h  LabsTheme.cpp  LabsTheme.h  main.cpp
app/engine/resources/: labs.qrc
app/launcher/: CMakeLists.txt  HubWindow.cpp  HubWindow.h  MarketplaceWidget.cpp  MarketplaceWidget.h  main.cpp
app/plugins/: CMakeLists.txt
app/plugins/assisted_aim/: AssistedAimPlugin.cpp  AssistedAimPlugin.h  CMakeLists.txt
app/plugins/capture_card/: CMakeLists.txt  CaptureCardPlugin.cpp  CaptureCardPlugin.h  CaptureDevicePickerDialog.cpp  CaptureDevicePickerDialog.h  MfCaptureSource.cpp  MfCaptureSource.h
app/plugins/competitive_aim/: CMakeLists.txt  CompetitiveAimPlugin.cpp  CompetitiveAimPlugin.h
app/plugins/cv_python/: CvPythonPlugin.cpp  CvPythonPlugin.h  ShmBus.cpp
app/plugins/detection_logger/: CMakeLists.txt  DetectionLoggerPlugin.cpp  DetectionLoggerPlugin.h
app/plugins/display/: DisplayPlugin.cpp  DisplayPlugin.h
app/plugins/dualsense_input/: DualSensePlugin.cpp  DualSensePlugin.h
app/plugins/onnx_inference/: CMakeLists.txt  DetectionPostprocessor.cpp  DetectionPostprocessor.h  FramePreprocessor.cpp  FramePreprocessor.h  OnnxInferencePlugin.cpp  OnnxInferencePlugin.h  OnnxSession.cpp  OnnxSession.h
app/plugins/ps_remote_play/: CMakeLists.txt  PSRemotePlayPlugin.cpp  PairPSDialog.cpp  PairPSDialog.h  PsnLoginDialog.cpp
app/plugins/smart_capture/: CMakeLists.txt  ProcessMonitor.cpp  ProcessMonitor.h  SmartCapturePlugin.cpp  SmartCapturePlugin.h  SmartCaptureProvider.cpp  SmartCaptureProvider.h
app/plugins/titan_input/: CMakeLists.txt  TitanInputPlugin.cpp  TitanInputPlugin.h
app/plugins/vigem_output/: CMakeLists.txt  ViGEmPlugin.cpp  ViGEmPlugin.h
app/plugins/wgc_capture/: WgcCapturePlugin.cpp  WgcCapturePlugin.h  WgcSource.cpp  WgcSource.h
app/plugins/xbox_stream/: CMakeLists.txt  XboxConsolePickerDialog.cpp  XboxConsolePickerDialog.h  XboxSignInDialog.cpp  XboxSignInDialog.h  XboxStreamPlugin.cpp  XboxStreamPlugin.h  XboxStreamSession.cpp  XboxStreamSession.h
app/plugins/xbox_web/: CMakeLists.txt  WebView2Widget.cpp  WebView2Widget.h  XboxWebPlugin.cpp  XboxWebPlugin.h
app/plugins/xinput_input/: XInputPlugin.cpp  XInputPlugin.h
app/scripts/: installer.nsi  package.ps1
app/sidecars/xbox/: .gitignore  auth.js  main.js  package-lock.json  package.json  renderer.html  renderer.js  run-spike.ps1
app/sidecars/xbox-stream/: README.md  auth.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
labs-engine/chiaki-ng/lib/include/labs/: takionsendbuffer.h
labs-engine/chiaki-ng/lib/src/: takionsendbuffer.c
labs-engine/cv-scripts/: meter2k.py  shot_meter.py
labs-engine/cv-scripts/zpe/: engine.py
labs-engine/scripts/: Labs2K.py  SecretK.py  ZP_Higher_Lite.py  labs_frame_bridge.py  labs_input_bridge.py  test_ls_walk.py  xDrive2K.py  xDrive3K.py  xDriveCV.py  xZPHigher.py  xdrive3k_cv.py  xinput_test.py  xui.py
labs-engine/scripts/dev/: test_button_tap.py  test_input_bridge.py
labs-engine/scripts/zp_core/: controller_ps.py  engine.py
labs-engine/scripts/zphigher/: main.py  requirements.txt
labs-engine/scripts/zphigher/core/: controller.py  controller_ps.py  engine.py  keyauth.py  network_optimizer.py  security.py  titan_bridge.py  xinput.py
labs-engine/scripts/zphigher/profiles/: profile_1.json
server/: README.md  labs-validate.service  nginx.conf  tokens.json  validate.py
server/marketplace/: manifest.json
tools/: pack_xdrive3k.ps1
