add_subdirectory(display)
add_subdirectory(wgc_capture)
add_subdirectory(xinput_input)
add_subdirectory(vigem_output)
add_subdirectory(cv_python)
add_subdirectory(ps_remote_play)
add_subdirectory(dualsense_input)
add_subdirectory(xbox_stream)
add_subdirectory(xbox_web)
add_subdirectory(capture_card)
